--- a/src/pages/Login.module.css
+++ b/src/pages/Login.module.css
@@ -5,6 +5,11 @@
   min-height: calc(100vh - 5rem);
 }
 
+.formSection {
+  display: flex;
+  align-items: flex-start;
+}
+
 .form {
   background-color: var(--color-dark--2);
   border-radius: 7px;
@@ -23,4 +28,9 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+}
+
+.loginButtonsContainer {
+  display: flex;
+  gap: 20px;
 }
